<resources>
    <string name="app_name">CSC306</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_create_meeting">CreateMeeting</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_edit">EDIT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_detail">ViewDetailActivity</string>
    <string name="title_activity_edit_meeting">EditMeetingActivity</string>
    <string name="title_create_label">Title:</string>
    <string name="title_create_input">Title</string>
    <string name="start_create_label">Start:</string>
    <string name="end_create_label">End:</string>
    <string name="select_date">Click to Pick a Date...</string>
    <string name="select_time">Click to Pick a Time...</string>
    <string name="select_location">Click to Pick a location...</string>
    <string name="location_label">Location:</string>
    <string name="notes_label">Notes:</string>
    <string name="notes_input">Notes</string>
    <string name="location_hint">Location name</string>
    <string name="attendee_label">Attendees:</string>
    <string name="attendee_view">Please add an attendee below...</string>
    <string name="attendee_hint">Attendee Name</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="s_date_time">sDateTime</string>
    <string name="e_date_time">eDateTime</string>
    <string name="loca_lab">location</string>
    <string name="to">to</string>
    <string name="setting_title">Text Style</string>
    <string name="color_title">Text Colour</string>
    <string name="symb">#</string>
    <string name="color_hint">Colour Hex Code</string>
    <string name="pre">Preview And Set</string>
    <string name="size_lab">Font Size</string>
    <string name="maroon">Maroon</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="olive">Olive</string>
    <string name="green">Green</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="lime">Lime</string>
    <string name="navy">Navy</string>
    <string name="blue">Blue</string>
    <string name="teal">Teal</string>
    <string name="aqua">Aqua</string>
</resources>
