<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateMeetingActivity"
    tools:showIn="@layout/activity_create_meeting">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_create_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/textedit_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/title_create_input"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_create_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_create_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <AutoCompleteTextView
                android:id="@+id/textedit_location_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:completionHint="@string/location_hint"
                android:completionThreshold="1" />

            <TextView
                android:id="@+id/textView_location"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:layout_weight="0.37"
                android:text="@string/select_location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/notes_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/editText_notes"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/notes_input"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attendee_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/attendee_list_text"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:layout_weight="2"
                android:text="@string/attendee_view"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <AutoCompleteTextView
                android:id="@+id/text_add_attendee"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:layout_weight="1"
                android:completionHint="@string/attendee_hint"
                android:completionThreshold="0" />

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_remove"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</ScrollView>